# libtcc-cmake

./: .gitattributes  CMakeLists.txt  README.md  libtcc.pro
cmake/: DefineDefaultParameter.cmake  DefineLibtccDefinitions.cmake  DefineLibtccSources.cmake  DetectArmFeatures.cmake  GetTargetArchitecture.cmake  SetupExtension.cmake  default_parameter.cmake  detect_arm_features.cmake  detect_target_architecture.cmake  libtcc_compile_definitions.cmake  libtcc_default_parameter.cmake  libtcc_include_directories.cmake  libtcc_link_libraries.cmake  libtcc_sources.cmake
extension/: README.md
extension/cmake/: SetupExtension.cmake  SetupExtensionSources.cmake  libtcc1_sources.cmake  libtcc_extension_compile_definitions.cmake  libtcc_extension_default_parameter.cmake  libtcc_extension_include_directories.cmake  libtcc_extension_sources.cmake  setup_extension.cmake
extension/include/tcc/: libtcc_ext.h  str_builder.h
extension/lib_src/lib_libtcc1/: bcheck.c
extension/runtime/libtcc1_src/: bt-exe.c
extension/src/: libtcc_ext.c  libtcc_ext_private.h  libtcc_ext_tcc_new_implementation.c  libtcc_ext_tools.c  str_builder.c
extension/src/private/: filesystem.h  str_builder.h  utility.h
extension/src/private/src/: filesystem.c  str_builder.c  utility.c
include/tcc/: config.h  libtcc.h  tcc.h
runtime/: CMakeLists.txt  runtime.pri
runtime/android/include/tcc/: tcc_libm.h
src/: i386-gen.c  libtcc.c  tccelf.c  tccpe.c  tccpp.c  tcctools.c
tcc/: CMakeLists.txt  compile_libtcc1.bat  compile_libtcc1.sh
tests/: CMakeLists.txt  compiletest.cpp
tests/libs/googletest/: .gitrepo
tests/res/test/: test.txt
tests/src/: compiletest.cpp  filesystemtest.cpp  utilitytest.cpp
win32/: CMakeLists.txt
